新增   SendInviteReply  回覆會議(ACCEPT,DECLINE,TENTATIVE) [TestMethod] [Description("回覆拒絕參加會議")] public void SendInviteReplyRequestSelfTest() {  var param = new SendInviteReplyRequestParam();  param.Subject = "討論WCF與EF架構";  param.Body = "DECLINE:討論WCF與EF架構";  //需要先取得 invId 不然測試會失敗  param.Id = "32412-32411";  param.Organizer = new Attendee {Email = "alice_lai@gss.com.tw"};  param.Replier = new Attendee { Email = "rainmaker_ho@gss.com.tw" };  param.Verb = SendInviteReplyRequestParam.ReplyVerbs.DECLINE;
 ZmailRequest.ApiRequest = new SendInviteReplyRequest(param);
 var zResquest = ZmailDispatcher.SendRequest(ZmailRequest);
 var resp = zResquest.ApiResponse as SendInviteReplyResponse;
 var invId = resp?.InvId;
 Console.WriteLine($"InvId:{invId}");
}

--- a/ZimbraCSharpClient/Zimbra.Client.csproj
+++ b/ZimbraCSharpClient/Zimbra.Client.csproj
@@ -100,7 +100,6 @@
     </Compile>
     <Compile Include="src\Mail\CancelAppointment.cs" />
     <Compile Include="src\Mail\CheckRecurConflicts.cs" />
-    <Compile Include="src\Mail\Class1.cs" />
     <Compile Include="src\Mail\CreateAppointment.cs" />
     <Compile Include="src\Mail\GetAppointment.cs">
       <SubType>Code</SubType>
@@ -130,6 +129,7 @@
     </Compile>
     <Compile Include="src\Account\SearchCalendarResources.cs" />
     <Compile Include="src\Mail\Search.cs" />
+    <Compile Include="src\Mail\SendInviteReply.cs" />
     <Compile Include="src\Mail\Sync.cs">
       <SubType>Code</SubType>
     </Compile>
